[feat]: 文件结构确定完成

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "environment": [
                 {
                     "name": "PATH",
-                    "value": "${workspaceFolder}/build/bin/"
+                    "value": "${workspaceFolder}/build/bin/Namica/${command:cmake.buildType}"
                 }
             ]
         }
