--- a/namica/CMakeLists.txt
+++ b/namica/CMakeLists.txt
@@ -1,5 +1,11 @@
 project(Namica)
 
+# 设置生成路径
+set(BUILD_DIR "${CMAKE_BINARY_DIR}/bin/${PROJECT_NAME}/${CMAKE_BUILD_TYPE}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BUILD_DIR})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BUILD_DIR})
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BUILD_DIR})
+
 file(GLOB_RECURSE SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
 )
@@ -11,6 +17,6 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE
     -DNAMICA_ENABLE_ASSERTS # 启用宏断点检查
 )
 
-target_include_directories(${PROJECT_NAME} PRIVATE
+target_include_directories(${PROJECT_NAME} PUBLIC
     "${CMAKE_CURRENT_SOURCE_DIR}/src"
 )
