Feat/window event (#2)
* 开始使用c++20, 引擎基础日志系统搭建完毕

* 增加glfw和yaml-cpp依赖, 初见文件系统和window

* 增加logger输出前缀的log, 增加glfwwindow, openglcontext的引入, 增加glad引入现代opengl函数

* 开始增加事件系统, 待完善窗口回调

* 窗口事件注册框架完成, 顺利跑通

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 project(NamicaProject)
 
-# 使用C++17
-set(CMAKE_CXX_STANDARD 17)
+# 使用C++20
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 # 编译器设置
@@ -21,7 +21,7 @@ if(WIN32 AND MSVC)
     add_compile_options("$<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CONFIG:RELEASE>>:/Oi>") # 将一些常用标准库的函数优化为内联函数替换, 减少调用开销
     add_compile_options("$<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CONFIG:RELEASE>>:/Ob2>") # 运行编译器在同一模块自动内联, 包含一些小函数
     add_compile_options("$<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CONFIG:RELEASE>>:/GL>") # 全程序优化, 允许编译器在链接阶段统一优化, 比如跨模块内联
-    add_compile_options("$<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CONFIG:RELEASE>>:/Gy>") # 未调用的函数可以被连接器剔除, 减少生成产物的体积
+    add_compile_options("$<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CONFIG:RELEASE>>:/Gy>") # 未调用的函数可以被连接器剔除, 减少生成产物的大小
 
     # CXX
     add_compile_options("$<$<COMPILE_LANGUAGE:CXX>:/Zi>") # 生成完整的调试信息, 存储在.pdb文件中 独立存储调试信息
@@ -30,7 +30,8 @@ if(WIN32 AND MSVC)
     add_compile_options("$<$<COMPILE_LANGUAGE:CXX>:/execution-charset:utf-8>") # 运行时字面量使用utf-8
     add_compile_options(/MP) # 开启并行编译
     add_compile_options(/W4) # 严格代码检查
-    add_compile_options(/WX) # 将所有警告视为错误
+
+    # add_compile_options(/WX) # 将所有警告视为错误 -> 不可全局设置, 否则一些三方库编译不通过
     add_compile_options(/permissive-) # 禁止msvc的宽松模式, 方便代码更好的平台兼容性
 
     set(CMAKE_SHARED_LINKER_FLAGS_RELEASE "${CMAKE_SHARED_LINKER_FLAGS_RELEASE} /DEBUG") # Release配置下的共享库链接器，添加/DEBUG 选项
