--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "namica/vendor/yaml-cpp"]
 	path = namica/vendor/yaml-cpp
 	url = https://github.com/qihaichiaki/yaml-cpp
+[submodule "namica/vendor/glm"]
+	path = namica/vendor/glm
+	url = https://github.com/qihaichiaki/glm
