--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
 [submodule "namica/vendor/glm"]
 	path = namica/vendor/glm
 	url = https://github.com/qihaichiaki/glm
+[submodule "namica/vendor/imgui"]
+	path = namica/vendor/imgui
+	url = https://github.com/qihaichiaki/imgui
+	branch = docking
